--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>页面标题</title>
+<title>这是dayi</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -113,12 +113,12 @@ body {
 <body>
 
 <div class="header">
-  <h1>菜鸟教程网页测试实例</h1>
-  <p>创建一个页面。</p>
+  <h1>this is dayi</h1>
+  <p>这里是大一。</p>
 </div>
 
 <div class="navbar">
-  <a href="#">链接</a>
+  <a href="https://dayiyi.top">dayi的博客</a>
   <a href="#">链接</a>
   <a href="#">链接</a>
   <a href="#" class="right">链接</a>
